--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.3"
 services:
   client:
     build:
-      context: ./client
+      context: .
       dockerfile: Dockerfile
     volumes:
       - client_voluem:/client/build
